<resources>
    <string name="app_name">Denul</string>
    <string name="nearby_service_identifier">de.velcommuta.denul.service</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_track_display">Track</string>

    <!-- Menu drawer in main activity -->
    <string name="menu_home">Home</string>
    <string name="menu_track_run">Track</string>
    <string name="menu_old_tracks">Exercise History</string>
    <string name="menu_title_2">Extras</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_research">Research</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_imprint">Imprint</string>

    <!-- Action bar menu -->
    <string name="abarmenu_friends_add">Add Friend</string>

    <!-- Buttons and fields during GPS tracking -->
    <string name="start_run">Start</string>
    <string name="stop_run">Stop</string>
    <string name="reset_run">Reset</string>
    <string name="save_run">Save this track</string>
    <string name="session_name_hint">Enter a name for this session</string>
    <string name="header_speed">Speed</string>
    <string name="default_speed">-</string>
    <string name="header_time">Current Time</string>
    <string name="header_distance">Distance</string>
    <string name="default_distance">-</string>
    <string name="location_tracking_notify">Workout tracking active</string>
    <string name="location_tracking_details">%1$s is currently tracking your workout</string>

    <!-- Friend list -->
    <string name="friendlist_empty_lonely">Pretty lonely here…</string>
    <string name="friendlist_empty_explanation">Looks like you have not added any friends yet.</string>
    <string name="friendlist_empty_cta">Add a friend</string>

    <!-- Add a friend -->
    <string name="friend_add_step1_title">Add a friend</string>
    <string name="friend_add_step1_explanation">How do you want to add your new friend?</string>
    <string name="friend_add_step1_nearby_title">Google Nearby</string>
    <string name="friend_add_step1_nearby_description">Choose this if you are in the same WiFi</string>

    <string name="friend_add_step2_nearby_title">Select your Friend\'s Device</string>
    <string name="friend_add_step2_nearby_emptyview">Looking for devices…</string>
    <string name="friend_add_step2_nearby_emptyview_nowifi">Please connect to a wireless network</string>
    <string name="friend_add_step2_nearby_state_connecting">Establishing connection</string>
    <!-- TODO Change the following two strings to give a less technical explanation of whats going on -->
    <string name="friend_add_step2_nearby_state_exchanging">Exchanging keys</string>
    <string name="friend_add_step2_nearby_state_calculating">Calculating keys</string>
    <string name="friend_add_step2_nearby_state_done">Done</string>
    <string name="friend_add_step3_verify_title">Your new Friend</string>
    <string name="friend_add_step3_verify_name_desc">Enter a name for your new friend:</string>
    <string name="friend_add_step3_verify_scan_desc">To make sure everything went well, please scan the code displayed on your friends device, and let your friend scan yours.</string>
    <string name="friend_add_step3_verify_securitylevel_header">Security Level:</string>
    <string name="friend_add_step3_verify_finish">Finish</string>
    <string name="friend_add_step3_verify_skip">Skip</string>
    
    <!-- Friend list context menu -->
    <string name="friend_ctx_remove">Remove</string>

    <!-- Friend show activity -->
    <string name="friend_show_delete">Delete</string>
    <string name="friend_show_rename">Rename</string>
    <string name="friend_show_scan">Scan</string>
    <!-- TODO Better message -->
    <string name="friend_verify_warn">Warning: This contact could not be verified. Please verify this contact by scanning their QR code using the camera icon, or consider deleting it. Otherwise, the security of data you share with them cannot be guaranteed.</string>

    <!-- Exercise List strings -->
    <string name="exercise_list_empty">Nothing to see here</string>
    <string name="exercise_list_empty_expl">Want to go running?</string>
    
    <!-- Social stream strings -->
    <string name="social_stream_no_location_shared">%s did not share any location data :(</string>
    <string name="social_stream_no_location_available">No location data available :(</string>
    <string name="social_stream_shared_name">shared \'%s\'</string>
    <string name="social_stream_recorded_name">recorded \'%s\'</string>
    <string name="social_stream_you">You</string>

    <!-- Exercise List context menu -->
    <string name="exercise_ctx_remove">Delete</string>
    <string name="exercise_ctx_share">Share</string>
    <!-- Exercise view menu buttons -->
    <string name="exercise_show_delete">Delete</string>
    <string name="exercise_show_rename">Rename</string>
    <string name="exercise_show_share">Share</string>
    <!-- Social stream menu buttons -->
    <string name="social_refresh">Refresh</string>
    <!-- Status messages -->
    <string name="save_success">Saved</string>

    <!-- Studies -->
    <string name="study_institution">Institution:</string>
    <string name="study_description">Description:\r\n</string>
    <string name="study_purpose">Purpose:\r\n</string>
    <string name="study_procedures">Procedures:\r\n</string>
    <string name="study_benefits">Benefits:\r\n</string>
    <string name="study_risks">Risks:\r\n</string>
    <string name="study_conflicts">Conflicts of interest:\r\n</string>
    <string name="study_confidentiality">Confidentiality of data:\r\n</string>
    <string name="study_participation">Participation:\r\n</string>
    <string name="study_rights">Participant\'s rights:\r\n</string>
    <string name="study_url">Website:</string>
    <string name="study_investigators">Team:\r\n</string>
    <string name="study_datarequests">Requested data:\r\n</string>

    <!-- Study Menu-->
    <string name="study_menu_join">Join</string>
    <string name="study_menu_leave">Leave</string>

    <!-- Shareable granularity descriptions -->
    <string name="shareable_granularity_unknown">Unknown</string>
    <string name="shareable_track_granularity_fine">Full location and time data</string>
    <string name="shareable_track_granularity_coarse">Distance and time only</string>

    <!-- Share Menu Strings -->
    <string name="share_menu_description_hint">Enter a description (optional)</string>

    <!-- Imprint -->
    <string name="imprint_header">Imprint</string>
    <string name="imprint_text"><![CDATA[
    Denul was developed for a Master Thesis at the Secure Mobile Networking Lab (Seemoo), TU Darmstadt.\r\n\r\n
    This application is Free Software and licensed under the GNU GPLv3. See gnu.org/licenses for details. You can find the source code at github.com/DenulApp\r\n\r\n
    This app uses the following libraries:\r\n
    - EventBus (Apache License v2) \r\n
    - android-maps-utils (Apache License v2) \r\n
    - SQLCipher for Android (BSD-Style License) \r\n
    - DNSJava (BSD License) \r\n
    - JodaTime (Apache License v2)\r\n
    - SpongyCastle (Adapted MIT License)\r\n
    - ZXing-Android-Embedded (Apache License v2)\r\n
    - ZXing-Core (Apache License v2)\r\n
    - libvicbf (Apache License v2)\r\n
    - Protocol Buffers (BSD 3-Clause License)\r\n
    - Google Play Services (Proprietary)\r\n\r\n
    Some of the used assets are provided by Google under the CC BY license.
    ]]></string>

    <!-- Unit strings -->
    <string name="distance_m">%1$d m</string>
    <string name="distance_km">%1$.02f km</string>
    <string name="velocity_kmh">%1$.02f km/h</string>
    <string name="content_desc_cycling">Cycling</string>
    <string name="content_desc_running">Running</string>

    <!-- Strings that are not displayed anywhere - should not be localized / translated -->
    <string name="preferences_keystore">de.velcommuta.denul.PREF_KEYSTORE</string>
    <string name="preferences_keystore_rsapub">rsa-pub</string>
    <string name="preferences_keystore_seqnr">seqnr</string>
</resources>