<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_start" android:icon="@drawable/ic_home_24dp"
            android:title="@string/menu_home" />
        <item android:id="@+id/nav_tracks" android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_track_run" />
        <item android:id="@+id/old_tracks" android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_old_tracks" />
        <!-- <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" /> -->
    </group>

    <item android:title="@string/menu_title_2">
        <menu>
                <item android:id="@+id/nav_friends" android:icon="@drawable/ic_menu_allfriends"
                android:title="@string/menu_friends" />
            <item android:id="@+id/nav_menu" android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_prefs" />
        </menu>
    </item>

</menu>