<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="de.velcommuta.denul.ui.FriendAddFragment"
    android:orientation="vertical"
              android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/friend_add_step1_title"
        android:id="@+id/addfriend_step1_title"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/friend_add_step1_explanation"
        android:id="@+id/textView2"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:id="@+id/addfriend_step1_nearby_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/addfriend_step1_nearby_logo"
            android:src="@mipmap/nearby"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/friend_add_step1_nearby_title"
                android:id="@+id/addfriend_step1_nearby_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/friend_add_step1_nearby_description"
                android:id="@+id/addfriend_step1_nearby_desc"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>