<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".ui.FriendAddVerificationFragment"
    android:orientation="vertical"
              android:padding="5dp"
              android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/friend_add_step3_verify_title"
        android:id="@+id/addfriend_step3_verify_title"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/friend_add_step3_verify_desc"
        android:id="@+id/addfriend_step3_verify_desc"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addfriend_step3_verify_qrcode"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friend_add_step3_verify_securitylevel_header"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addfriend_step3_verify_b1"
            android:src="@drawable/ic_circle"
            android:layout_gravity="center_horizontal"
            android:tint="@android:color/holo_orange_light"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addfriend_step3_verify_b2"
            android:src="@drawable/ic_circle"
            android:layout_gravity="center_horizontal"
            android:tint="@android:color/holo_orange_light"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addfriend_step3_verify_b3"
            android:src="@drawable/ic_circle"
            android:layout_gravity="center_horizontal"
            android:tint="@android:color/darker_gray"/>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scan"
            android:id="@+id/addfriend_step3_verify_scanbutton"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_add_step3_verify_finish"
            android:id="@+id/addfriend_step3_verify_continue"
            android:layout_gravity="right"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>